--- a/Site web/CSS/Style choix de langue.css
+++ b/Site web/CSS/Style choix de langue.css
@@ -1,6 +1,14 @@
 @charset "utf-8";
 body {
-    color: aliceblue;
+    color: rgb(252, 252, 252);
     background-color: rgb(0, 51, 153);
     text-align: center;
+    vertical-align: middle;
+    height: 10em;
+    position: absolute;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    margin-right: 50%;
+    transform: translate(-50%, -50%);
 }
