--- a/Site web/CSS/Style choix de langue.css
+++ b/Site web/CSS/Style choix de langue.css
@@ -1,14 +1,21 @@
 @charset "utf-8";
 body {
     color: rgb(252, 252, 252);
-    background-color: rgb(0, 51, 153);
+    background-color: rgb(4, 46, 129);
+    font-size: xx-large;
+    font-style: normal;
+    font-weight: bold;
     text-align: center;
     vertical-align: middle;
     height: 10em;
     position: absolute;
     margin: 0;
-    top: 50%;
+    top: 60%;
     left: 50%;
     margin-right: 50%;
     transform: translate(-50%, -50%);
+}
+
+a {
+    color: rgb(252, 252, 252);
 }
