--- a/Site web/CSS/Barre fixe.css
+++ b/Site web/CSS/Barre fixe.css
@@ -7,18 +7,28 @@
         z-index: 10;
     }
     
-    #banniere {
-        width: 100%;
-        height: 300px;
-        position: fixed;
-        top: 100px;
-        background: #707070;
+    a {
+        color: teal;
+        text-decoration: none;
     }
     
     #contenu {
         width: 100%;
         position: relative;
-        top: 400px;
+        top: 150px;
         background: #ebebeb;
         height: 1500px;
+    }
+    
+    #container {
+        margin: 0;
+        padding: 0;
+        border: 0;
+    }
+    
+    #header-contenu {
+        width: 1000px;
+        margin: 0 auto;
+        padding: 35px 0 0 0;
+        overflow: hidden;
     }
