--- a/Site web/CSS/Barre fixe.css
+++ b/Site web/CSS/Barre fixe.css
@@ -44,6 +44,8 @@
         text-transform: uppercase;
         text-align: center;
         letter-spacing: 10px;
+        text-shadow: 2px 2px aliceblue;
+        color: black;
     }
     
     #header-contenu nav li {
