--- a/Site web/CSS/Barre fixe.css
+++ b/Site web/CSS/Barre fixe.css
@@ -15,7 +15,7 @@
     }*/
     
     a {
-        color: rgb(143, 233, 233);
+        color: rgb(240, 231, 180);
         text-decoration: none;
     }
     
@@ -37,7 +37,8 @@
     #header-contenu {
         width: 1000px;
         margin: 0 auto;
-        padding: 60px 0 0 0;
+        text-align: center;
+        padding: 50px 0 0 0;
         overflow: hidden;
     }
     
@@ -54,6 +55,7 @@
         float: left;
         font-size: 20px;
         margin: 0 0 0 60px;
+        text-align: center;
         list-style: none;
     }
     
