--- a/Site web/CSS/Barre fixe.css
+++ b/Site web/CSS/Barre fixe.css
@@ -75,3 +75,19 @@
         text-align: justify;
         margin-top: -10px;
     }
+    
+    #contenu-membres {
+        width: 100%;
+        position: relative;
+        top: 200px;
+        background: #e8e0f7;
+        height: 1500px;
+        margin: 0px;
+        columns: 100px 3;
+        -webkit-columns: 100px 3;
+        /* Safari and Chrome */
+        -moz-columns: 100px 3;
+        /* Firefox */
+    }
+    
+    #contenu-membres h2 {}
