--- a/Site web/CSS/Barre fixe.css
+++ b/Site web/CSS/Barre fixe.css
@@ -102,6 +102,8 @@
         width: 100%;
         height: 200px;
         background-color: #e8e0f7;
+        margin: 0 0 0;
+        border: 0;
     }
     
     #contenu-membres h2 {
