--- a/Site web/CSS/Puzzle.css
+++ b/Site web/CSS/Puzzle.css
@@ -16,7 +16,7 @@ BODY {
     width: 120px;
     height: 120px;
     border: 1px solid white;
-    background: url(http://www.politicalmetaphors.com/wp-content/uploads/2015/04/blog-shapes-square-windows.jpg);
+    background: url(../images/casse\ tete.png);
     cursor: pointer;
 }
 
