--- a/Site web/CSS/Barre fixe.css
+++ b/Site web/CSS/Barre fixe.css
@@ -30,6 +30,15 @@
         margin: 0px;
     }
     
+    #contenu-timeline {
+        width: 100%;
+        position: relative;
+        top: 200px;
+        background: #d2c7d6;
+        height: 1500px;
+        margin: 0px;
+    }
+    
     #casse-tete-fond {
         width: 100%;
         position: relative;
@@ -114,4 +123,28 @@
         width: 100%;
         height: 700px;
         background-color: #e8e0f7;
+    }
+    
+    #contenu-journal {
+        width: 100%;
+        position: relative;
+        top: 200px;
+        background: #e6f5ed;
+        height: 1500px;
+        margin: 0px;
+    }
+    
+    #contenu-journal img {
+        width: 100%;
+        position: relative;
+        top: 20px;
+        margin: 0px;
+    }
+    
+    .images-float-left {
+        float: left;
+    }
+    
+    .images-float-right {
+        float: right;
     }
