--- a/Site web/CSS/Barre fixe.css
+++ b/Site web/CSS/Barre fixe.css
@@ -1,150 +1,167 @@
-    @charset "utf-8";
-    header {
-        height: 210px;
-        /*background: #c40b61;*/
-        position: fixed;
-        width: 100%;
-        z-index: 10;
-        background-image: url(../images/fond\ barre\ fixe.png);
-        background-size: cover;
-        margin-left: -10px;
-        margin-top: -20px;
-    }
-    /*ul a {
+@charset "utf-8";
+header {
+    height: 210px;
+    /*background: #c40b61;*/
+    position: fixed;
+    width: 100%;
+    z-index: 10;
+    background-image: url(../images/fond\ barre\ fixe.png);
+    background-size: cover;
+    margin-left: -10px;
+    margin-top: -20px;
+}
+
+
+/*ul a {
         display: -moz-grid-line;
         width: 100%;
     }*/
-    
-    header a {
-        color: rgb(243, 237, 203);
-        text-decoration: none;
-        text-shadow: 1px 1px rgb(65, 67, 70);
-    }
-    
-    #contenu {
-        width: 100%;
-        position: relative;
-        top: 200px;
-        background: #ebebeb;
-        height: 1500px;
-        margin: 0px;
-    }
-    
-    #contenu-timeline {
-        width: 100%;
-        position: relative;
-        top: 200px;
-        background: #d2c7d6;
-        height: 1500px;
-        margin: 0px;
-    }
-    
-    #casse-tete-fond {
-        width: 100%;
-        position: relative;
-        top: 200px;
-        background: rgb(240, 216, 221);
-        height: 500px;
-        margin: 0px;
-    }
-    
-    #container {
-        margin: 0px;
-        padding: 0;
-        border: 0;
-    }
-    
-    #header-contenu {
-        width: 1000px;
-        margin: 0 auto;
-        text-align: center;
-        padding: 50px 0 0 0;
-        overflow: hidden;
-    }
-    
-    #header-contenu h1 {
-        font-size: 40px;
-        text-transform: uppercase;
-        text-align: center;
-        letter-spacing: 10px;
-        text-shadow: 2px 2px aliceblue;
-        color: black;
-    }
-    
-    #header-contenu nav li {
-        float: left;
-        font-size: 20px;
-        margin: 0 0 0 42px;
-        text-align: center;
-        list-style: none;
-    }
-    
-    body p {
-        margin: 20px;
-        text-align: justify;
-        margin-top: -10px;
-    }
-    
-    #contenu-membres {
-        width: 100%;
-        position: relative;
-        top: 200px;
-        background: #e8e0f7;
-        height: 3000px;
-        margin: 0px;
-        columns: 100px 3;
-        -webkit-columns: 100px 3;
-        /* Safari and Chrome */
-        -moz-columns: 100px 3;
-        /* Firefox */
-        text-align: center;
-    }
-    
-    #membres {
-        position: relative;
-        /*margin: 10px, 10px, 10px;*/
-        text-align: center;
-    }
-    
-    #contenu-membres p {
-        font-size: medium;
-        width: 100%;
-        height: 200px;
-        background-color: #e8e0f7;
-        margin: 0 0 0;
-        border: 0;
-    }
-    
-    #contenu-membres h2 {
-        margin-top: 0px;
-    }
-    
-    #case {
-        width: 100%;
-        height: 700px;
-        background-color: #e8e0f7;
-    }
-    
-    #contenu-journal {
-        width: 100%;
-        position: relative;
-        top: 200px;
-        background: #e6f5ed;
-        height: 1500px;
-        margin: 0px;
-    }
-    
-    #contenu-journal img {
-        width: 100%;
-        position: relative;
-        top: 20px;
-        margin: 0px;
-    }
-    
-    .images-float-left {
-        float: left;
-    }
-    
-    .images-float-right {
-        float: right;
-    }
+
+header a {
+    color: rgb(243, 237, 203);
+    text-decoration: none;
+    text-shadow: 1px 1px rgb(65, 67, 70);
+}
+
+#contenu {
+    width: 100%;
+    position: relative;
+    top: 200px;
+    background: #ebebeb;
+    height: 1500px;
+    margin: 0px;
+}
+
+#contenu-souvenirs {
+    width: 100%;
+    position: relative;
+    top: 200px;
+    background: #f5d1e0;
+    height: 1500px;
+    margin: 0px;
+    /*padding: 20px;*/
+}
+
+#contenu-souvenirs img {
+    border-radius: 50%;
+    padding: 20px;
+}
+
+#contenu-timeline {
+    width: 100%;
+    position: relative;
+    top: 200px;
+    background: #d2c7d6;
+    height: 1500px;
+    margin: 0px;
+}
+
+#casse-tete-fond {
+    width: 100%;
+    position: relative;
+    top: 200px;
+    background: rgb(240, 216, 221);
+    height: 500px;
+    margin: 0px;
+}
+
+#container {
+    margin: 0px;
+    padding: 0;
+    border: 0;
+}
+
+#header-contenu {
+    width: 1000px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 50px 0 0 0;
+    overflow: hidden;
+}
+
+#header-contenu h1 {
+    font-size: 40px;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 10px;
+    text-shadow: 2px 2px aliceblue;
+    color: black;
+}
+
+#header-contenu nav li {
+    float: left;
+    font-size: 20px;
+    margin: 0 0 0 42px;
+    text-align: center;
+    list-style: none;
+}
+
+body p {
+    margin: 20px;
+    text-align: justify;
+    margin-top: -10px;
+}
+
+#contenu-membres {
+    width: 100%;
+    position: relative;
+    top: 200px;
+    background: #e8e0f7;
+    height: 3000px;
+    margin: 0px;
+    columns: 100px 3;
+    -webkit-columns: 100px 3;
+    /* Safari and Chrome */
+    -moz-columns: 100px 3;
+    /* Firefox */
+    text-align: center;
+}
+
+#membres {
+    position: relative;
+    /*margin: 10px, 10px, 10px;*/
+    text-align: center;
+}
+
+#contenu-membres p {
+    font-size: medium;
+    width: 100%;
+    height: 200px;
+    background-color: #e8e0f7;
+    margin: 0 0 0;
+    border: 0;
+}
+
+#contenu-membres h2 {
+    margin-top: 0px;
+}
+
+#case {
+    width: 100%;
+    height: 700px;
+    background-color: #e8e0f7;
+}
+
+#contenu-journal {
+    width: 100%;
+    position: relative;
+    top: 200px;
+    background: #e6f5ed;
+    height: 1500px;
+    margin: 0px;
+}
+
+#contenu-journal img {
+    width: 100%;
+    position: relative;
+    top: 20px;
+    margin: 0px;
+}
+
+.images-float-left {
+    float: left;
+}
+
+.images-float-right {
+    float: right;
+}
