--- a/Site web/CSS/timeline.css
+++ b/Site web/CSS/timeline.css
@@ -7,7 +7,7 @@
 
 body {
     background-color: #faf8f6;
-    font-family: Helvetica, sans-serif;
+    /*font-family: Helvetica, sans-serif;*/
 }
 
 
