--- a/Site web/CSS/Barre fixe.css
+++ b/Site web/CSS/Barre fixe.css
@@ -9,6 +9,7 @@ header {
     background-size: cover;
     margin-left: -10px;
     margin-top: -20px;
+    font-family: Helvetica, sans-serif;
 }
 
 
@@ -30,6 +31,7 @@ header a {
     background: #ebebeb;
     height: 1500px;
     margin: 0px;
+    font-family: Helvetica, sans-serif;
 }
 
 #contenu-souvenirs {
@@ -40,6 +42,7 @@ header a {
     height: 1500px;
     margin: 0px;
     /*padding: 20px;*/
+    font-family: Helvetica, sans-serif;
 }
 
 #contenu-souvenirs img {
@@ -63,6 +66,7 @@ header a {
     background: rgb(240, 216, 221);
     height: 500px;
     margin: 0px;
+    font-family: Helvetica, sans-serif;
 }
 
 #container {
@@ -77,6 +81,7 @@ header a {
     text-align: center;
     padding: 50px 0 0 0;
     overflow: hidden;
+    font-family: Helvetica, sans-serif;
 }
 
 #header-contenu h1 {
@@ -100,6 +105,7 @@ body p {
     margin: 20px;
     text-align: justify;
     margin-top: -10px;
+    font-family: Helvetica, sans-serif;
 }
 
 #contenu-membres {
@@ -115,12 +121,14 @@ body p {
     -moz-columns: 100px 3;
     /* Firefox */
     text-align: center;
+    font-family: Helvetica, sans-serif;
 }
 
 #membres {
     position: relative;
     /*margin: 10px, 10px, 10px;*/
     text-align: center;
+    font-family: Helvetica, sans-serif;
 }
 
 #contenu-membres p {
@@ -149,6 +157,7 @@ body p {
     background: #e6f5ed;
     height: 1500px;
     margin: 0px;
+    font-family: Helvetica, sans-serif;
 }
 
 #contenu-journal img {
