--- a/Site web/CSS/Barre fixe.css
+++ b/Site web/CSS/Barre fixe.css
@@ -47,7 +47,8 @@ header a {
 
 #contenu-souvenirs img {
     border-radius: 50%;
-    padding: 20px;
+    padding: 1%;
+    width: 31%;
 }
 
 #contenu-timeline {
@@ -55,7 +56,7 @@ header a {
     position: relative;
     top: 200px;
     background: #d2c7d6;
-    height: 1500px;
+    height: 3000px;
     margin: 0px;
 }
 
@@ -133,6 +134,7 @@ body p {
 
 #membres img {
     border-radius: 9px;
+    width: 98%;
 }
 
 #contenu-membres p {
