--- a/Site web/CSS/Barre fixe.css
+++ b/Site web/CSS/Barre fixe.css
@@ -97,7 +97,7 @@ header a {
 #header-contenu nav li {
     float: left;
     font-size: 20px;
-    margin: 0 0 0 42px;
+    margin: 0 0 0 3.5%;
     text-align: center;
     list-style: none;
 }
@@ -138,7 +138,7 @@ body p {
 }
 
 #contenu-membres p {
-    font-size: medium;
+    font-size: large;
     width: 100%;
     height: 200px;
     background-color: #e8e0f7;
