--- a/Site web/CSS/Barre fixe.css
+++ b/Site web/CSS/Barre fixe.css
@@ -39,7 +39,7 @@ header a {
     position: relative;
     top: 200px;
     background: #f5d1e0;
-    height: 1500px;
+    height: 100%;
     margin: 0px;
     /*padding: 20px;*/
     font-family: Helvetica, sans-serif;
