--- a/Site web/CSS/Barre fixe.css
+++ b/Site web/CSS/Barre fixe.css
@@ -29,7 +29,7 @@ header a {
     position: relative;
     top: 200px;
     background: #ebebeb;
-    height: 1500px;
+    height: 100%;
     margin: 0px;
     font-family: Helvetica, sans-serif;
 }
@@ -158,7 +158,7 @@ body p {
 
 #case {
     width: 100%;
-    height: 700px;
+    height: 850px;
     background-color: #e8e0f7;
 }
 
