images jeux border radius

--- a/Site web/CSS/Barre fixe.css
+++ b/Site web/CSS/Barre fixe.css
@@ -34,6 +34,10 @@ header a {
     font-family: Helvetica, sans-serif;
 }
 
+#contenu img {
+    border-radius: 9px;
+}
+
 #contenu-souvenirs {
     width: 100%;
     position: relative;
