--- a/Site web/CSS/Barre fixe.css
+++ b/Site web/CSS/Barre fixe.css
@@ -171,7 +171,7 @@ body p {
     position: relative;
     top: 200px;
     background: #e6f5ed;
-    height: 1500px;
+    height: 100%;
     margin: 0px;
     font-family: Helvetica, sans-serif;
 }
