--- a/Site web/CSS/Style choix de langue.css
+++ b/Site web/CSS/Style choix de langue.css
@@ -1,12 +1,12 @@
 @charset "utf-8";
 body {
     color: rgb(252, 252, 252);
-    background-color: rgb(4, 46, 129);
     font-size: xx-large;
     font-style: normal;
     font-weight: bold;
     text-align: center;
     vertical-align: middle;
+    background-size: cover;
     height: 10em;
     position: absolute;
     margin: 0;
